objects/CIP_History_De_Implementation__c.object
<CustomObject>
    <fields>
        <fullName>All_Packages_or_Suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>All Packages or Suffixes?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History De-Implementations</relationshipLabel>
        <relationshipName>CIP_History_De_Implementations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Claims_Run_Out_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims Run Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_Run_out__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims Run Out Applied?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_history_timeframe_required__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims history timeframe required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claims_of_Months__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claims # of Months</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commingling_Run_Out_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commingling Run Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commingling_of_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Commingling # of Days</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_anticipated_final_settlement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of anticipated final settlement?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Define_Age_and_Rule_per_Package_Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>De-Implementation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Count_of_Contracts_Lost__c</fullName>
        <label>Estimated Count of Contracts Lost</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSA_Run_Out_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA Run Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSA_of_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FSA # of Days</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRA_HSA_Extra_Bucks_of_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HRA/HSA Extra Bucks # of Days</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Impact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IVR Impact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Not_All_Which_Packages_Suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Not All Which Packages/Suffixes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_so_please_list_it_here__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If so, please list it here</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_so_which_Claims_Platform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If so, which claims platform?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_please_explain_History_Transfer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, please explain:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indicate_any_special_De_Imp_agreements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Indicate any special De-Imp agreements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Indicate_special_processing_requi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Indicate Special Processing Req</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_acquiring_group_an_Anthem_client__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Is acquiring group an Anthem client?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_History_Conversion_Requirements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>List History Conversion Requirements:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_all_accumulators_to_be_transmitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>List all accumulators to be transmitted:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Migrating_to_another_Platform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Migrating to another Platform?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Carrier_c__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_DIT_Run_Out_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other DIT Run Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_DIT_of_Days__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other DIT # of Days</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefixs_to_be_Cancelled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefix(s) to be Cancelled</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Cancellation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_transfers_required__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record transfers required?</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_group_number_of_acquiring_group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What is group number of acquiring group?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CIP History De-Implementation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History De-Implementations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History De-Implementations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>